Added item core fields to tasks everywhere. Fixed omnibar search tab being activated when accordion was open.

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -161,7 +161,7 @@
     background-image: none !important;
   }
   #feature-container-wrapper, #feature-container,
-  .border-button, .add-button,
+  .border-button, .add-button, button[disabled].search-tab-button,
   .static-page-header {
     background-color: inherit;
   }
