styleguide import fix

--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -1,4 +1,7 @@
 @import "foundation.less";
+@import "colors.less";
+@import "typography.less";
+@import "layout.less";
 
 a {
   text-decoration: none;
