--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -1,4 +1,6 @@
 @import "foundation.less";
+@import "colors.less";
+@import "layout.less";
 
 @danger-text: @delete-button;
 @rounded-corner-radius: 15px;
