--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -1,5 +1,7 @@
 @import "foundation.less";
 @import "icons.less";
+@import "typography.less";
+@import "layout.less";
 
 @plus-button-width: 27px;
 @icon-button-width: @plus-button-width;
