--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -119,6 +119,11 @@ Font control with alignment:
   }
 }
 
+#email-verification-status {
+  font-size: @font-smallest-size;
+  display: block;
+  line-height: @vertical-grid-half;
+}
 
 // Lists
 ul {
