--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -1,3 +1,4 @@
+@import "foundation.less";
 @import "layout.less";
 @import "animations.less";
 @import "inputs.less";
@@ -5,6 +6,84 @@
 /*
 Extended Mind specific UI-components.
 */
+
+section#welcome {
+  max-width: 350px;
+  .column {
+    overflow-y: auto;
+    .banner {
+      padding-bottom: @vertical-grid;
+      span {
+        width: 200px;
+        display: block;
+        text-align: center;
+        .center-horizontally;
+      }
+      padding-top: @vertical-grid * 1.5;
+    }
+    .content {
+      text-align: center;
+      line-height: @vertical-grid-half;
+      #welcome-instructions {
+        padding-bottom: @vertical-grid;
+      }
+      #welcome-store-buttons {
+        padding-bottom: @vertical-grid;
+      }
+      #welcome-continue-link {
+        font-size: @font-small-size;
+      }
+    }
+  }
+}
+
+section#signup {
+  .column {
+    .banner {
+      margin-bottom: -@vertical-grid * 7;
+    }
+    .banner:after {
+      height: @vertical-grid * 7;
+    }
+    .content {
+      height: @vertical-grid * 7;
+      span#agreeText {
+        font-size: @font-small-size;
+        color: @content;
+        line-height: 19px;
+        a {
+          color: @highlighted-element;
+        }
+        a:active {
+          color: @highlighted-element-pressed;
+        }
+      }
+    }
+  }
+}
+
+// TASKS TIMELINE
+section#tasks-timeline {
+  .date-heading {
+    position: relative;
+  }
+  #pull-to-previous, #pull-to-next {
+    text-align: center;
+    line-height: 200px;
+    height: 200px;
+    width: 100%;
+  }
+  #pull-to-previous {
+    position: absolute;
+    top: -200px;
+  }
+  .loader {
+    color: @default-element;
+  }
+  .loader-active {
+    color: @highlighted-element;
+  }
+}
 
 /* # ACCORDION */
 
@@ -179,6 +258,30 @@ footer {
   li.right-slide-link {
     a {
       padding-left: @horizontal-grid - 10px; // make room for long names
+    }
+  }
+}
+
+footer {
+  position: relative;
+  height: @footer-height;
+  width: inherit;
+  text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+  .center-horizontally;
+  font-size: @font-smallest-size;
+  nav {
+    padding-top: 5px;
+    ul {
+      li {
+        text-align: center;
+        a {
+          padding-right: @horizontal-grid;
+          padding-left: @horizontal-grid;
+          display: inline-block !important;
+        }
+      }
     }
   }
 }
