--- a/frontend/core/src/main/webapp/styleguide/css/phytoplankton/main.css
+++ b/frontend/core/src/main/webapp/styleguide/css/phytoplankton/main.css
@@ -696,7 +696,7 @@ img {
   position: fixed;
   top: 8%;
   transition: all .25s ease-in-out;
-  width: 75%;
+  width: 350px;
   z-index: 1; }
   .phytoplankton-menu.is-active {
     transform: translate3d(0, 0, 0); }
