--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -1,5 +1,15 @@
 @import "normalize.less";
 
+/*
+
+# Foundation
+
+The basic infrastructure for the extended mind UI. 
+
+Imports normalize.less for making browsers render all elements more consistently and in line with modern standards.
+
+*/
+
 * {
   // Use border box everywhere
   -moz-box-sizing: border-box;
