--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -812,8 +812,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
  * Licensed under GPL & MIT
  *
  * Released on: January 29, 2014
-*/
-.swiper-container {
+ */
+ .swiper-container {
   margin:0 auto;
   overflow:hidden;
   -webkit-backface-visibility:hidden;
@@ -922,49 +922,49 @@ Pagination Styles
 // #############################
 // from Bootstrap variables.less
 
-@zindex-modal-background:  1040;
-@zindex-modal:             1050;
+@zindex-modal-background: 1040;
+@zindex-modal: 1050;
 //** Padding applied to the modal body
-@modal-inner-padding:         15px;
+@modal-inner-padding: 15px;
 //** Padding applied to the modal title
-@modal-title-padding:         15px;
+@modal-title-padding 15px;
 //** Modal title line-height
-@modal-title-line-height:     @vertical-grid-half;
+@modal-title-line-height: @vertical-grid-half;
 //** Background color of modal content area
-@modal-content-bg:                             #fff;
+@modal-content-bg: #fff;
 //** Modal content border color
-@modal-content-border-color:                   rgba(0,0,0,.2);
+@modal-content-border-color: rgba(0,0,0,.2);
 //** Modal content border color **for IE8**
-@modal-content-fallback-border-color:          #999;
+@modal-content-fallback-border-color: #999;
 //** Modal backdrop background color
-@modal-backdrop-bg:           #000;
+@modal-backdrop-bg: #000;
 //** Modal backdrop opacity
-@modal-backdrop-opacity:      .5;
+@modal-backdrop-opacity: .5;
 //** Modal header border color
-@modal-header-border-color:   #e5e5e5;
+@modal-header-border-color: #e5e5e5;
 //** Modal footer border color
-@modal-footer-border-color:   @modal-header-border-color;
-@modal-lg:                    900px;
-@modal-md:                    600px;
-@modal-sm:                    300px;
+@modal-footer-border-color: @modal-header-border-color;
+@modal-lg: 900px;
+@modal-md: 600px;
+@modal-sm: 300px;
 
 // Small screen / tablet
 // Note: Deprecated @screen-sm and @screen-tablet as of v3.0.1
-@screen-sm:                  768px;
-@screen-sm-min:              @screen-sm;
-@screen-tablet:              @screen-sm-min;
+@screen-sm: 768px;
+@screen-sm-min: @screen-sm;
+@screen-tablet: @screen-sm-min;
 
 // Medium screen / desktop
 // Note: Deprecated @screen-md and @screen-desktop as of v3.0.1
-@screen-md:                  992px;
-@screen-md-min:              @screen-md;
-@screen-desktop:             @screen-md-min;
+@screen-md: 992px;
+@screen-md-min: @screen-md;
+@screen-desktop: @screen-md-min;
 
 // Large screen / wide desktop
 // Note: Deprecated @screen-lg and @screen-lg-desktop as of v3.0.1
-@screen-lg:                  1200px;
-@screen-lg-min:              @screen-lg;
-@screen-lg-desktop:          @screen-lg-min;
+@screen-lg: 1200px;
+@screen-lg-min: @screen-lg;
+@screen-lg-desktop: @screen-lg-min;
 
 // #################
 
@@ -974,14 +974,14 @@ Pagination Styles
 .translate(@x; @y) {
   -webkit-transform: translate(@x, @y);
       -ms-transform: translate(@x, @y); // IE9 only
-          transform: translate(@x, @y);
-}
-.transition-transform(@transition) {
-  -webkit-transition: -webkit-transform @transition;
-     -moz-transition: -moz-transform @transition;
-       -o-transition: -o-transform @transition;
-          transition: transform @transition;
-}
+      transform: translate(@x, @y);
+    }
+    .transition-transform(@transition) {
+      -webkit-transition: -webkit-transform @transition;
+      -moz-transition: -moz-transform @transition;
+      -o-transition: -o-transform @transition;
+      transition: transform @transition;
+    }
 
 // Drop shadows
 //
@@ -990,7 +990,7 @@ Pagination Styles
 //   standard `box-shadow` property.
 .box-shadow(@shadow) {
   -webkit-box-shadow: @shadow; // iOS <4.3 & Android <4.1
-          box-shadow: @shadow;
+  box-shadow: @shadow;
 }
 
 // Opacity
@@ -1055,7 +1055,7 @@ Pagination Styles
   background-color: @modal-content-bg;
   border: 1px solid @modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
   border: 1px solid @modal-content-border-color;
-  .box-shadow(0 3px 9px rgba(0,0,0,.5));
+  .box-shadow(0 3px 9px rgba(0, 0, 0, .5));
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: none;
