--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -927,7 +927,7 @@ Pagination Styles
 //** Padding applied to the modal body
 @modal-inner-padding: 15px;
 //** Padding applied to the modal title
-@modal-title-padding 15px;
+@modal-title-padding: 15px;
 //** Modal title line-height
 @modal-title-line-height: @vertical-grid-half;
 //** Background color of modal content area
