pythoplankton h1 fix (first h1 is used only as a heading, and should not be included in the styleguide left menu

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -4,7 +4,7 @@
 @import "layout.less";
 
 /*
-<h1>Inputs</h1>
+<h1 class="main-heading">Inputs</h1>
 
 All forms and buttons used in extended mind UI. Imports following less libraries:
 
