IScroll carousel in omnibar.  * added into note edit  * removed hideNoteProperties logic  * bound scrolling into slides instead of IScroll container  * calculate note content height correctly

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -348,8 +348,10 @@ footer {
   width: 100%;
 }
 .omnibar-edit-item-scroller {
+  position: relative;
   width: 200%;
   height: 100%;
+  overflow: hidden;
 }
 
 .omnibar-edit-item-scroller li {
@@ -357,6 +359,7 @@ footer {
   height: 100%;
   float: left;
   list-style-type: none;
+  overflow-y: auto;
 }
 
 #omnibar-edit-item-scroller-indicator {
