--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -107,3 +107,10 @@
 .icon-arrow-left {
   font-size: @slide-indicator-width;
 }
+
+span.icon-i, span.icon-logo-only {
+  color: @highlighted-element;
+}
+span.icon-i:active, span.icon-logo-only:active {
+  color: @highlighted-element-pressed;
+}
