--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -51,3 +51,15 @@ a:active {
 a.click-to-slide {
   color: @default-element;
 }
+
+.click-to-slide {
+  display: table;
+  width: 100%;
+  vertical-align: middle;
+  span.link-title {
+    width: 100%;
+    display: table-cell;
+    line-height: normal;
+    color: @content;
+  }
+}
