--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -120,6 +120,7 @@ Date input gets formatted by `.date-input-placeholder`.
 </div>
 ```
 */
+//TODO MENEE UUSIKSI (PIKADAY)
 .date-input-placeholder {
   display: block;
 }
