--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -179,12 +179,10 @@ Input on the left and button on the right OR checkbox on the left, input in the 
 /*
 # Buttons
 
-Wrap buttons with `.button` for the basic look.
+Use `.button` with buttons for minimalist look (no borders or shadings).
 
 ```markup
-<button type="button" class="wide-button border-button" ng-click="sortInbox()">
-  <span ng-bind="getSortingText()" class="ng-binding">sort inbox</span>
-</button>
+<button class="button">sort inbox</button>
 ```
 */
 .button {
