--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -226,8 +226,7 @@ Use `.button` minimalist look (no default button borders or shadings).
 }
 
 /*
-TODO: SELKEÄMMIN ERI VÄRISET NAPIT
-TODO: Refactoring needed
+TODO: Refactoring needed, button presentation more clearly (like in Yelp Styleguide)
 http://stackoverflow.com/a/12198561/2659424
 
 * `.default-button` gives the basic button coloring (pressed and disabled states)
